trying to fix interesting actions error
