# api_endpoints/wireguard.go
@@ -2,7 +2,7 @@ package api_endpoints
 
 import (
 	"github.com/gin-gonic/gin"
-	"k8-project/wireguard"
+	wireguardK8s "k8-project/wireguard"
 )
 
 type Wireguard struct {
@@ -14,18 +14,18 @@ type ConfigFile struct {
 	File string `json:"file"`
 }
 
-// StartWireguard godoc
+// PostWireguard godoc
 // @Summary Sends a public key and starts Wireguard
 // @Produce json
 // @Param publicKey body Wireguard true "Wireguard"
 // @Success 200 {object} ConfigFile
 // @Router /wireguard/ [post]
-func (c Controller) StartWireguard(ctx *gin.Context) {
+func (c Controller) PostWireguard(ctx *gin.Context) {
 	var body Wireguard
 	if err := ctx.BindJSON(&body); err != nil {
 		message := "bad request"
 		ctx.JSON(400, ErrorResponse{Message: message})
 	}
-	file := wireguard.PostWireguard(*c.ClientSet, body.Namespace, body.Key)
+	file := wireguardK8s.PostWireguard(*c.ClientSet, body.Namespace, body.Key)
 	ctx.JSON(200, file)
 }
